...
                IntroView(
                    title: "Accetta un bonus ID Pay",
                    subtitle: """
                                Inserisci i dettagli del pagamento e permetti ai tuoi
                                clienti di utilizzare un bonus ID Pay.
                                """,
                    actionTitle: "Accetta bonus ID Pay",
                    action: {
                        print("Inizia flusso bonus")
                    })
            case .receipt:
                ReceiptTicketDemoView()
            case .waitingView:
...
            isPresenting: $isPresentingDialog,
            onClose: {
                print("Do some action on close")
            }
        )
        .dialogCode(
            title: "Problemi con il QR?",
            subtitle: "Entra sull’app IO, vai nella sezione Inquadra e digita il codice:",
            codeValue: codeValue ?? "",
            isPresenting: $isPresentingDialogCode,
            onClose: {
                print("Do some action on close")
            }
        )
        .waitingView(
            title: "Attendi autorizzazione",
            subtitle: "Per proseguire è necessario autorizzare l’operazione sull’app IO",
            buttons: [
                ButtonModel(type: .plain, themeType: .info, title: "Annulla", action: {
                isPresentingWaitingView.toggle()
            })],
            isPresenting: $isPresentingWaitingView
        )
        .showSheet(isVisibile: $showMenu) {
            MenuView(showMenu: $showMenu, showHelp: $showHelp)
...
            subtitle: "Hai a disposizione ancora 2 tentativi.",
            themeType: ThemeType.warning,
            buttons: [
                ButtonModel(
                    type: .primary,
                    themeType: .warning,
                    title: "Riprova",
                    action: {
                        print("Riprova")
                    }
                ),
                ButtonModel(
                    type: .plain,
                    themeType: .warning,
                    title: "Esci dal pagamento",
                    action: {
                        print("Esci dal pagamento")
                    }
                )
            ]
        )
...
                        print("Identificazione con CIE")
                    }
                ),
                ButtonModel(
                    type: .primaryBordered,
                    themeType: .light,
                    title: "Accetta nuovo bonus",
                    icon: .io,
                    action: {
                        print("Accetta nuovo bonus")
                    }
                )
            ]
        )
        isPresentingDialog.toggle()
    }
    
    private func abortAction() {
        self.dialogModel = ResultModel(
            title: "Vuoi annullare la spesa del bonus ID Pay?",
            subtitle: """
                La spesa è già stata autorizzata, 
                se annulli l’operazione l’importo verrà riaccreditato sull’iniziativa del cittadino.
                """,
            themeType: ThemeType.light,
            buttons: [
...
                        print("Concludi operazione")
                    }
                ),
                ButtonModel(
                    type: .plain,
                    themeType: .light,
                    title: "Annulla operazione",
                    action: {
                        print("Annulla operazione")
                    }
                )
            ]
        )
...
